objects/User.object
<CustomObject>
    <fields>
        <fullName>Email_Weekly_Sales_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used for ChatterOnly license to add email to Sales Report Group in apex schedule class salesreportscheduler</inlineHelpText>
        <label>Email Weekly Sales Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Type_Notifications__c</fullName>
        <description>The Opportunity Engagement Types that user will be receiving notifications for Closed/Won deals</description>
        <inlineHelpText>The Opportunity Engagement Types that user will be receiving notifications for Closed/Won deals</inlineHelpText>
        <label>Engagement Type Notifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Notify_Closed_Won_Opportunities__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Workforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Closed_Won_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Closed Won Opportunities will be notified to this person if checked</description>
        <inlineHelpText>Closed Won Opportunities will be notified to this person if checked</inlineHelpText>
        <label>Notify Closed Won Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Custom_Apex_Erros__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notifies users of custom Apex errors</description>
        <inlineHelpText>Notifies users of custom Apex errors</inlineHelpText>
        <label>Notify Custom Apex Erros</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Console_Settings__c</fullName>
        <label>Dispatch Console Settings</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__FaceTime_ID__c</fullName>
        <description>User&apos;s FaceTime login ID. Used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</description>
        <inlineHelpText>Enter this user&apos;s FaceTime login ID if available. This is used to make FaceTime calls in ServiceMax iPad Client. If this is left blank, user&apos;s phone number and email are used for the call.</inlineHelpText>
        <label>FaceTime ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Super_Dispatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if user is Super Dispatcher.</description>
        <inlineHelpText>Flag to indicate if user is Super Dispatcher.</inlineHelpText>
        <label>Is Super Dispatcher?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__ServiceMax_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if User is a ServiceMax User</description>
        <label>ServiceMax User</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Chatter_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>n</value>
        </filters>
        <label>Active Chatter Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Field_Service_Technicians</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Mobile</value>
        </filters>
        <label>Active Field Service Mobile Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Field_Service_Technicians</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Mobile</value>
        </filters>
        <label>All Field Service Technicians</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Select_Engagement_Type_Notifications</fullName>
        <active>true</active>
        <description>Users that have &quot;Notify Closed Won Opportunities &quot; checked require the multi-picklist &quot;Engagement Type Notifications&quot; field to be completed</description>
        <errorConditionFormula>AND(
ISBLANK( Engagement_Type_Notifications__c), Notify_Closed_Won_Opportunities__c =true
)</errorConditionFormula>
        <errorDisplayField>Engagement_Type_Notifications__c</errorDisplayField>
        <errorMessage>Please select at lease one Engagement Type to send notifications for Closed/Won opportunities</errorMessage>
    </validationRules>
</CustomObject>